fix results alignment

--- a/components/Results.module.css
+++ b/components/Results.module.css
@@ -34,32 +34,31 @@
 }
 
 .result-toggle-saes {
-  flex: none;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
   width: 14.351%;
   background-color: var(--black);
   color: var(--white);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
 
   .h2 {
-    margin: 0.6em 0;
+    margin: 0.6em auto;
   }
 
   .alert {
     color: var(--black);
+  }
+
+  .resultItem.disabled & {
+    color: pink;
   }
 }
 
 .result-toggle {
   background-color: transparent;
   outline: none;
+  margin: 0 auto;
   margin-top: 17.420%;
-  display: inline-flex;
-  padding: 1px;
-  outline-offset: -2px;
-  justify-self: flex-start;
 }
 
 
